traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:35: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var murNord:Boolean
      ^Snake:35: error: local variables must be initialized
  var murNord:Boolean
      ^